@@ -132,6 +132,10 @@ Changes in Runtime Behavior
   spans that were previously discarded in preference to shorter 
   overlapping ones. (Alan Woodward, Adrien Grand, Paul Elschot)
 
+* LUCENE-6569: Optimize MultiFunction.anyExists and allExists to eliminate
+  excessive array creation in common 2 argument usage (Jacob Graves, hossman)
+
+
 Build
 
 * LUCENE-6518: Don't report false thread leaks from IBM J9
